# Image-rail

./: .gitignore  README.md  package-lock.json  package.json
src/: main.js  preload.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/renderer/: index.html  renderer.js  styles.css  tauri-api.js
